proper/src/components/Panels.css
.cellproper, .selectionsproper, .displayproper {
    box-sizing: border-box; /* Include padding and border in the element's total width and height */
}

.cellproper {
    padding-top: 60px;
    top: 8%;
    left: 0;
    width: 100%;
    height: 17.33vh;
    display: flex;
    align-items: center;
    justify-content: center; 
}

.cellproper div {
    margin-right: 0.25vw;
}

.cells {
    text-align: center;
}

.board1, .board2 {
    width: 272px;
    height: 144px;
    z-index: 2;
    background-image: url("../assets/panel.png");
    background-repeat: no-repeat;
    background-size: cover;
    display: inline-block;
    animation: bounce 2.75s;
    animation-fill-mode: forwards;
}

.board2 {
    animation-delay: 0.1s;
}

.board3 {
    width: 272px;
    height: 144px;
    z-index: 2;
    background-image: url("../assets/panel.png");
    background-repeat: no-repeat;
    background-size: cover;
    display: inline-block;
    animation: hingebounce 3s;
    animation-delay: 0.70s;
    animation-fill-mode: forwards;
}

.cells img {
    width: 256px;
    height: 128px;
}

.cells p {
    top: 0%;
    left: 0%;
    padding: 20px;
    color: white;
}

.hinge {
    animation: hinge 4s ease; 
}

.lowerguide {
    position: absolute;
    bottom: 100px;
    left: 45%;
    animation: moving 4s infinite;
    animation-fill-mode: forwards;
    opacity: 0;
    transition: opacity 1s ease;
}

.lowerguide.visible {
    opacity: 1;
}

.lowerguide img {
    height: 180px;
    width: 180px;
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% { transform: translateY(0); } 
    40% { transform: translateY(-45px); } 
    60% { transform: translateY(-15px); } 
}

@keyframes hingebounce {
    0% { transform: translateY(-150px); }
    20%, 50% { transform: translateY(0); } 
    40% { transform: translateY(-30px); } 
    50% { transform: translateY(-15px); }
    60% { transform: rotate(15deg); } 
    70% { transform: rotate(20deg); } 
    85% { transform: rotate(15deg); } 
    100% { transform: rotate(30deg) translateY(60px); } 
}

@keyframes hinge {
    0% { transform: translateX(0px); } 
    100% { transform: translateX(480px); }
}

@keyframes moving {
    0% { transform: translateY(0px); }
    50% { transform: translateY(-40px); }
    100% { transform: translateY(0px); }
}

.selectionsproper {
    position: absolute;
    bottom: 7.5px;
    margin: 0;
    width: 100%;
    display: flex; 
    justify-content: space-around;
    z-index: 3;
    opacity: 0;
    transition: opacity 1s ease;
    animation: moving 5s infinite;
}

.selectionsproper.visible {
    opacity: 1;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex; 
    justify-content: space-around; 
}

.items {
    display: inline-block;
    padding: 10px;
    color: white;
    text-align: center;
    transition: ease, opacity 0.5s ease, height 1s ease;
    opacity: 1;
    width: 200px;
    height: 100px;
    background-image: url('../assets/Babu.png'); 
    background-repeat: no-repeat;
    background-size: cover;

}

.spin {
    transition: transform 1s ease-in-out;
}

.displayproper {
    position: absolute;
    bottom: 7.5px;
    margin: 0;
    width: 100%;
    display: flex; 
    justify-content: space-around;
    z-index: 2;
    opacity: 1;
    transition: opacity 1s ease, transform 1s ease; /* Added transform transition */
}

.displayitems {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex; 
    justify-content: space-around; 
    width: 50%;
    opacity: 0;                
    transition: opacity 1s ease;
}

.displayitems.animate {
    opacity: 1;
    animation: onClickAnimation 2.5s ease; /* check if matches timeout in jsx */
}

.displayitems img {
    width: 50px;
    height: 50px;
}

@keyframes onClickAnimation {
    0% {
        transform: translate(0px, 0px);
    }
    25% {
        transform: translate(0px, -450px);
    }
    50% {
        transform: translate(800px, -450px) rotate(90deg);
    }
    65% {
        transform: translate(800px, -450px) rotate(180deg);
    }
    85% {
        transform: translate(800px, 0px) rotate(270deg);
    }
    100% {
        transform: translate(25px, -25px) opacity(0);
    }
}

.displayproper.visible {
    transform: translateX(-300px); /* Move 300px to the left */
}

